--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/css/login-page.css
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/css/login-page.css
@@ -7,7 +7,8 @@
 
 .login-form-title {
     display: block;
-    margin: 0 auto;
+    margin: 5% auto;
+    color: #888;
 }
 
 input.login-form-username, input.login-form-password {
@@ -17,10 +18,15 @@ input.login-form-username, input.login-form-password {
     padding: .7% 0;
     text-align: center;
     font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    border-bottom: 1px solid #ED1C24;
+    background: #F5F5F5;
+    color: #222;
 }
 
 .login-form-button {
     display: block;
-    margin: 0 auto;
+    margin: 5% auto;
     width: 10%;
 }
