--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/css/main-styles.css
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/css/main-styles.css
@@ -18,9 +18,11 @@ p, h1, h2, h3, h4 {
     margin: 10px 0;
 }
 
-select, input[type=text] {
-    padding: .1rem;
-}
+/*select, input[type=text] {*/
+    /*padding: 0;*/
+    /*margin: 0;*/
+    /*height: 1rem;*/
+/*}*/
 
 *:focus {
     outline: 0;
