--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/css/setup-page.css
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/css/setup-page.css
@@ -25,14 +25,17 @@
     display: inline-block;
     float: left;
     width: 98%;
-    padding: 1%;
+    padding-top: 1%;
+    margin-bottom: .5%;
     border-top: 1px solid #aaa;
     text-align: center;
 }
 
 .setup-finalize-form {
-    display: inline-block;
-    width: 100%;
+    display: block;
+    clear: both;
+    width: 80%;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -47,4 +50,9 @@
 
 .extension-description {
     width: 30%;
+    margin: 0 auto;
+}
+
+.plan-reset-prompt {
+    margin: 1% 0;
 }
