--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/userChange.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/userChange.html
@@ -1,9 +1,9 @@
 <div class="clearfix" ng-if="!mapData.userChanges[testCase.testCaseId]">
     <span>{{testCase.displayName}}</span>
-    <button class="test-case-button-big float-right"
+    <button class="test-case-button float-right"
             ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2 && mapData.unallocated <= 0"
             ng-click="prepareUsersForAllocated(testCase.testCaseId, testCase.userId)">&#9776;</button>
-    <button class="test-case-button-big" ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
+    <button class="test-case-button float-right" ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
             ng-click="prepareUsersForUnallocated(testCase.testCaseId)">&#9776;</button>
 </div>
 
@@ -11,7 +11,7 @@
     <select ng-options="user.displayName for user in mapData.users track by user.id"
             ng-model="mapData.userChanges[testCase.testCaseId]"></select>
     <span>
-        <button class="test-case-button-big float-right" ng-click="mapData.userChanges[testCase.testCaseId] = false">&#x2718;</button>
-        <button class="test-case-button-big float-right font-green" ng-click="changeTestCaseUser(testCase)">&#x2714;</button>
+        <button class="test-case-button float-right" ng-click="mapData.userChanges[testCase.testCaseId] = false">&#x2718;</button>
+        <button class="test-case-button float-right font-green" ng-click="changeTestCaseUser(testCase)">&#x2714;</button>
     </span>
 </div>
