--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/setupPage/durationForm.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/setupPage/durationForm.html
@@ -1,11 +1,11 @@
 <form class="setup-duration-form" name="durationForm">
     <p>Resulted executions per day based on user input
-        <span class="bold" ng-if="setupData.actualTCPD">{{setupData.actualTCPD}}</span>
-        <span class="bold" ng-if="!setupData.actualTCPD">0</span>
+        <span class="font-bold" ng-if="setupData.actualTCPD">{{setupData.actualTCPD}}</span>
+        <span class="font-bold" ng-if="!setupData.actualTCPD">0</span>
     </p>
     <p>
         <label>Project duration
-            <input class="bold bigger" type="number" step="0.1" min="1" required
+            <input class="font-bold" type="number" step="0.1" min="1" required
                    ng-model="setupData.duration"
                    ng-disabled="setupData.existingPlan"
                    ng-change="onDurationChange()">
@@ -14,13 +14,13 @@
     </p>
     <p>
         <span>Test case allocation algorithm</span>
-        <label class="setup-algorithm bold bigger">
+        <label class="setup-algorithm font-bold">
             <input type="radio" name="algorithm" value="1"
                    ng-disabled="setupData.existingPlan"
                    ng-model="setupData.algorithm">
             <span>&quot;Fill days first&quot;</span>
         </label>
-        <label class="setup-algorithm bold bigger">
+        <label class="setup-algorithm font-bold">
             <input type="radio" name="algorithm" value="2"
                    ng-disabled="setupData.existingPlan"
                    ng-model="setupData.algorithm">
