--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/userHeader.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/userHeader.html
@@ -1,9 +1,9 @@
 <nav>
-    <div class="app-header-menu-message"><span class="bold">{{data.user.displayName}}</span></div>
+    <div class="app-header-menu-message"><span class="font-bold">{{data.user.displayName}}</span></div>
     <div class="app-header-menu-buttons">
-        <a class="button-medium"
+        <a class="button-medium font-bold"
            ng-if="data.project.id"
            ng-href="http://helios01/uat/ooredoo_product_details.php?id={{data.project.id}}">Dashboard</a>
-        <button class="button-medium" ng-click="logout()">Logout</button>
+        <button class="button-medium font-bold" ng-click="logout()">Logout</button>
     </div>
 </nav>
