--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/dateChange.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/allocationMapPage/dateChange.html
@@ -4,11 +4,7 @@
     <button class="test-case-button float-right"
             ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2 && mapData.unallocated <= 0"
             ng-click="prepareDaysForAllocated(testCase.testCaseId, testCase.dayIndex)">&#9776;</button>
-    <button class="test-case-button float-right" ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
-    <button class="test-case-button-big"
-            ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2 && mapData.unallocated <= 0"
-            ng-click="prepareDaysForAllocated(testCase.testCaseId, testCase.dayIndex)">&#9776;</button>
-    <button class="test-case-button-big" ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
+    <button class="test-case-button-big float-right" ng-if="testCase.externalStatus == 1 && mapData.unallocated > 0"
             ng-click="prepareDaysForUnallocated(testCase.testCaseId)">&#9776;</button>
 </div>
 
